RESOLVED FIXED127788
WebKit2 View Gestures (Swipe): Encode snapshots as JPEG on some platforms
https://bugs.webkit.org/show_bug.cgi?id=127788
Summary WebKit2 View Gestures (Swipe): Encode snapshots as JPEG on some platforms
Tim Horton
Reported 2014-01-28 12:46:43 PST
Attachments
patch (18.92 KB, patch)
2014-05-12 18:10 PDT, Tim Horton
no flags
fix the iOS build (18.94 KB, patch)
2014-05-12 22:12 PDT, Tim Horton
andersca: review+
Radar WebKit Bug Importer
Comment 1 2014-01-28 12:47:20 PST
Tim Horton
Comment 2 2014-05-12 16:48:53 PDT
*** Bug 132844 has been marked as a duplicate of this bug. ***
Tim Horton
Comment 3 2014-05-12 18:10:38 PDT
WebKit Commit Bot
Comment 4 2014-05-12 18:12:32 PDT
Attachment 231351 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/ViewSnapshotStore.mm:233: Missing space before { [whitespace/braces] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 5 2014-05-12 22:12:29 PDT
Created attachment 231361 [details] fix the iOS build
WebKit Commit Bot
Comment 6 2014-05-12 22:13:35 PDT
Attachment 231361 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/ViewSnapshotStore.mm:233: Missing space before { [whitespace/braces] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 7 2014-05-13 11:03:18 PDT
Comment on attachment 231361 [details] fix the iOS build View in context: https://bugs.webkit.org/attachment.cgi?id=231361&action=review > Source/WebKit2/UIProcess/mac/ViewSnapshotStore.mm:247 > +void ViewSnapshotStore::reduceSnapshotMemoryCost(String uuid) const String& uuid. > Source/WebKit2/UIProcess/mac/ViewSnapshotStore.mm:271 > +void ViewSnapshotStore::didCompressSnapshot(String uuid, RetainPtr<CGImageRef> newImage, size_t newImageSize) const String& uuid.
Tim Horton
Comment 8 2014-05-13 11:15:46 PDT
Tim Horton
Comment 9 2014-05-13 14:28:16 PDT
Tim Horton
Comment 10 2014-05-13 14:36:28 PDT
Note You need to log in before you can comment on or make changes to this bug.